--- a/CSS.css
+++ b/CSS.css
@@ -8,7 +8,7 @@ h1{
     font-weight: 400;
     text-align: center;
     font-family: 'Oswald', sans-serif;
-    color: #3974b79d;
+    color: #0808089d;
 }
 
 h2 {
@@ -58,7 +58,7 @@ hr{
 	background: #ffffff;
 	margin:0.5em 0; 
     padding:0.3em; 
-    font-size: medium;
+    font-size: 3rem;
 
 } 
 .navbar a{ 
@@ -71,11 +71,11 @@ justify-content: center;
 align-items: center;
 background: #333;
 background: rgba(0, 0, 0, 0.25);
-background-image:linear-gradient(
+/* background-image:linear-gradient(
     90deg,
     rgba(168,24,24,0.614),
     rgba(0, 0, 255, 0.733)
-);
+); */
 color: white;
 margin-bottom: 100px;
 position: relative;
