--- a/CSS.css
+++ b/CSS.css
@@ -2,18 +2,25 @@
     font-size: 75.5%;
     font-family: montserrat, sans-serif;
 }
-
+.margin{
+    margin-left: 4px;
+}
 h1{
     font-size: 3.5rem;
     font-weight: 400;
     text-align: center;
     font-family: 'Oswald', sans-serif;
-    color: #0808089d;
+    color: #0000009d;
 }
 
 h2 {
     font-family: 'Quicksand', sans-serif;
     font-size: 2.5rem;
+    line-height: 1.5em;
+}
+h3 {
+    font-size: 1.5rem;
+    font-family: 'Quicksand', sans-serif;
     line-height: 1.5em;
 }
 
@@ -51,6 +58,7 @@ hr{
 	padding:0; 
 	list-style-type:none; 
     align-content: center;
+    
 }
 .navbar li {
     display:inline; 
@@ -91,9 +99,22 @@ min-height: 100vh;
     min-width: 100%;
     min-height: 100%;
 }
-.intro {
-    text-align: center;
-    width: 80%;
-    margin: 0 auto;
-    max-width: 960px;
+.heroimage {
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
 }
+.social-buttons {
+  position: relative;
+  max-width: 680px;
+  margin: 0 auto;
+  padding: 50px 30px;
+  text-align: center;
+  scrollbar-shadow-color: blue;
+  background-color: #F0F2F5;
+  }
+  
