--- a/Style.css
+++ b/Style.css
@@ -6,9 +6,13 @@
         margin: auto;
     }
 #LayoutDiv1 {
-    
+ clear: both;
+ float: left;
+ margin-left: 0;
+ width: 100%;
+ display: block;   
 }
-}
+} /*Source: week 9 class presentation; slide 16*/
 
 :root {
     font-size: 75.5%;
@@ -25,8 +29,9 @@ h1{
 
 h2 {
     font-family: 'Quicksand', sans-serif;
-    font-size: 2.5rem;
-    line-height: 1.5em;
+    font-size: 2.0rem;
+    line-height: 1.0em;
+    text-decoration: underline;
 }
 h3 {
     font-size: 1.5rem;
@@ -36,9 +41,7 @@ h3 {
 p {
     font-size: 1.3em;
 }
-.abouts {
-    text-align: right;
-}
+
 hr{
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -146,6 +149,6 @@ min-height: 100vh;
   background-color: #F0F2F5;
   }
   .purpose {
-    grid-column-start: 1; 
-    grid-column-end: 2;
-  }
+    display: grid;
+    grid-template-columns: repeat(2, minmax(300px, 1fr));
+    }
